--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.AddListActivity" />
+        <activity android:name=".activities.NewListActivity" />
         <activity
             android:name=".activities.AddProductTabbedActivity"
             android:label="@string/title_activity_add_product_tabbed"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activities.SavedListActivity" />
+        <activity android:name=".activities.SettingsListActivity"></activity>
     </application>
 
 </manifest>
