--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,8 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
     defaultConfig {
-        applicationId "com.example.eduardomartinez.sdm_ilistpro"
-        minSdkVersion 19
+        applicationId "sdm_ilistpro.uniovi.es"
+        minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
