--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MainActivity">
+
+        <activity
+            android:name=".activities.MainActivity"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.NewListActivity" />
+
+        <activity
+            android:name=".activities.NewListActivity"
+            android:windowSoftInputMode="adjustPan"/>
+
         <activity
             android:name=".activities.AddProductTabbedActivity"
             android:label="@string/title_activity_add_product_tabbed"
             android:theme="@style/AppTheme.NoActionBar" />
+
         <activity android:name=".activities.SavedListActivity" />
+
         <activity android:name=".activities.SettingsListActivity"></activity>
     </application>
 
