--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,9 +27,12 @@
         <activity
             android:name=".activities.AddProductTabbedActivity"
             android:label="@string/title_activity_add_product_tabbed"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan" />
 
-        <activity android:name=".activities.SavedListActivity" />
+        <activity
+            android:name=".activities.SavedListActivity"
+            android:windowSoftInputMode="adjustPan"/>
 
         <activity android:name=".activities.SettingsListActivity"></activity>
     </application>
