--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 15 10:52:00 CET 2017
-sdk.dir=/Users/eduardomartinez/Library/Android/sdk
+#Wed Nov 15 10:58:08 CET 2017
+sdk.dir=C\:\\Users\\karolmc\\Android\\sdk
