--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.android.support:design:26.+'
     compile 'com.android.support:support-v4:26.+'
     compile 'org.greenrobot:greendao:3.2.2'
-    compile 'com.google.android.gms:play-services-location:11.0.4'
+    compile 'com.google.android.gms:play-services-location:11.+'
+    compile 'com.google.android.gms:play-services-vision:11.+'
     testCompile 'junit:junit:4.12'
 }
