--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
@@ -35,7 +34,8 @@
             android:name=".activities.SavedListActivity"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".activities.SettingsListActivity" />
-        <activity android:name=".activities.barcode.BarcodeCaptureActivity"></activity>
+        <activity android:name=".activities.barcode.BarcodeCaptureActivity" />
+        <activity android:name="sdm_ilistpro.uniovi.es.MainActivity"></activity>
     </application>
 
 </manifest>
